--- a/_includes/Homepage.html
+++ b/_includes/Homepage.html
@@ -3,7 +3,7 @@
         <!-- Include list.md content -->
         <pre>
             <!-- Adjust the path and file name as per your structure -->
-            {% include_relative pages/index.md %}
+            {% include_relative index.md %}
         </pre>
     </div>
 </div>
