--- a/_includes/Homepage.html
+++ b/_includes/Homepage.html
@@ -1,3 +1,4 @@
+<!--Static Page : pages/notes.md-->
 <div class="home-intro">
     <div class="jumbo">{{site.heading}}</div>
         <!-- Include list.md content -->
