--- a/_includes/Nav.html
+++ b/_includes/Nav.html
@@ -59,14 +59,14 @@
         <a href="../post/how-to" class="navbar-item">
           How To
         </a>
-        <a href="https://github.com/Jekyll-Garden/jekyll-garden.github.io" target="_blank" class="navbar-item">
+        <a href="https://github.com/mosnfar" target="_blank" class="navbar-item">
           Github
         </a>
-        <a href="https://jekyllrb.com/" target="_blank" class="navbar-item">
-          Jekyll
+        <a href="https://forge.mosn.me?ref=ai-atlas" target="_blank" class="navbar-item">
+          Blog
         </a>
-        <a href="https://obsidian.md/"  target="_blank" class="navbar-item">
-          Obsidian
+        <a href="https://www.youtube.com/@itsmosn"  target="_blank" class="navbar-item">
+          Youtube
         </a>
       </div>
       <div class="navbar-end is-hidden-mobile" onclick="modeSwitcher()" >
