--- a/_layouts/Post.html
+++ b/_layouts/Post.html
@@ -79,6 +79,8 @@
                     {%- if site.preferences.homepage.enabled -%}
                             <!--- Show Homepage -->
                             {%- include Homepage.html -%}
+                            <!--- Show List -->
+                            {% include_relative index.md %}
                     {%- else -%}
                             <!--- Show Feed Part -->
                 <div class="column is-6-widescreen  is-8-desktop is-8-tablet is-12-mobile">
