--- a/_includes/Nav.html
+++ b/_includes/Nav.html
@@ -53,12 +53,12 @@
     
     <div id="navbarBasicExample" class="navbar-menu">
       <div class="navbar-start">
-        <a href="{{'/notes' | relative_url}}" class="navbar-item">
+        <!-- <a href="{{'/notes' | relative_url}}" class="navbar-item">
           Demo Feed
         </a>
         <a href="../post/how-to" class="navbar-item">
           How To
-        </a>
+        </a> -->
         <a href="https://github.com/mosnfar" target="_blank" class="navbar-item">
           Github
         </a>
